[gd_scene load_steps=2 format=3 uid="uid://dylxxssl5t4na"]

[ext_resource type="Script" uid="uid://b4xejos7d0j2k" path="res://addons/gameAssetImporter/scenes/makeUI/path.gd" id="1"]

[node name="path" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.048
offset_bottom = 0.199999
size_flags_horizontal = 3
script = ExtResource("1")

[node name="h" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="h"]
layout_mode = 2
text = "path"

[node name="pathTxt" type="LineEdit" parent="h"]
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="Button3" type="Button" parent="h"]
layout_mode = 2
disabled = true
text = "\\/"

[node name="Button" type="Button" parent="h"]
layout_mode = 2
text = "..."

[node name="Button2" type="Button" parent="h"]
visible = false
layout_mode = 2
text = "+"

[node name="deleteSelf" type="Button" parent="h"]
visible = false
layout_mode = 2
text = "-"

[node name="PopupPanel" type="PopupPanel" parent="h"]
auto_translate_mode = 2
auto_translate = false

[node name="ErrorText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 2
bbcode_enabled = true
fit_content = true
tab_size = 0

[node name="FileDialog" type="FileDialog" parent="."]
auto_translate_mode = 2
title = "Open a File"
size = Vector2i(348, 180)
auto_translate = false
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true
use_native_dialog = true

[connection signal="text_changed" from="h/pathTxt" to="." method="_on_path_txt_text_changed"]
[connection signal="text_submitted" from="h/pathTxt" to="." method="_on_path_txt_text_submitted"]
[connection signal="pressed" from="h/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="h/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="h/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="h/deleteSelf" to="." method="_on_delete_self_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
